--- a/event-management-app/app/globals.css
+++ b/event-management-app/app/globals.css
@@ -19,8 +19,8 @@ body {
   .btn_white { 
     @apply  border-white bg-white px-8 py-3 text-green-50
   }
-  .btn_white_text  { 
-    @apply  border-white bg-white px-8 py-3 text-gray-90
+  .btn_white_text:hover { 
+    @apply  border-white bg-white px-8 py-3 text-gray-90 font-bold
   }
   .btn_green  { 
     @apply  border-green-50 bg-green-50 px-8 py-5 text-white
@@ -113,6 +113,10 @@ body {
 
   .bold-32 {
     @apply text-[32px] font-[700] leading-[120%];
+  }
+
+  .bold-24 {
+    @apply text-[24px] font-[700];
   }
 
   .bold-20 {
