--- a/event-management-app/app/globals.css
+++ b/event-management-app/app/globals.css
@@ -6,6 +6,16 @@
 @tailwind components;
 @tailwind utilities;
  
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Inter;
+  background-color: #FFF7EA;
+}
 
 .font-alex-brush {
   font-family: 'Alex Brush', cursive;
